--- a/single-master-node/Vagrantfile
+++ b/single-master-node/Vagrantfile
@@ -10,6 +10,18 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
   config.vm.box_check_update = false
 
+  config.vm.define "nfs-server" do |node|
+      node.vm.provider "virtualbox" do |vb|
+        vb.name = "nfs-server"
+        # vb.memory = 512
+        # vb.cpus = 0.5
+      end
+      node.vm.hostname = "nfs-server"
+      node.vm.network :private_network, ip: "192.168.56.198"
+      node.vm.network "forwarded_port", guest: 22, host: 12798
+      node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+  end
+
   # provision master node
   (1..NUM_MASTER_NODE).each do |i|
 	  config.vm.define "master0#{i}" do |node|
@@ -26,7 +38,6 @@ Vagrant.configure("2") do |config|
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
 	  end
   end
-
 
   # Provision Worker Nodes
   (1..NUM_WORKER_NODE).each do |i|
