--- a/single-master-node/Vagrantfile
+++ b/single-master-node/Vagrantfile
@@ -31,6 +31,7 @@ Vagrant.configure("2") do |config|
         vb.cpus = 2
       end
       node.vm.hostname = "master0#{i}"
+      node.vm.synced_folder "./manifests", "/home/deploy/data", :mount_options => ["dmode=777", "fmode=666"]
       node.vm.network :private_network, ip: IP_NW + "#{MASTER_IP_START + i}"
       node.vm.network "forwarded_port", guest: 22, host: "#{2780 + i}"
 
