--- a/single-master-node/kube-flannel-v0.24.2.yml
+++ b/single-master-node/kube-flannel-v0.24.2.yml
@@ -168,6 +168,7 @@ spec:
         command:
         - /opt/bin/flanneld
         args:
+        - --iface=enp0s8 # must add the right interface
         - --ip-masq
         - --kube-subnet-mgr
         resources:
