--- a/single-master-node/manifests/socket-app/persistent-volume-claim/database-pvc.yaml
+++ b/single-master-node/manifests/socket-app/persistent-volume-claim/database-pvc.yaml
@@ -1,6 +1,6 @@
 ## helm install socket-app-nfs --namespace storage nfs-subdir-external-provisioner/nfs-subdir-external-provisioner \
 #      --set nfs.server=192.168.56.198 \
-#      --set nfs.path=/mnt/retain \
+#      --set nfs.path=/mnt/mysql \
 #      --set storageClass.reclaimPolicy=Retain \
 #      --set storageClass.name=socket-app-sc
 apiVersion: v1
