--- a/single-master-node/playbook/nfs-server-playbook.yml
+++ b/single-master-node/playbook/nfs-server-playbook.yml
@@ -5,6 +5,7 @@
     ip_range: "192.168.56.0/24"
     retain_mounting_dir: /mnt/retain
     delete_mounting_dir: /mnt/delete
+    mysql_mounting_dir: /mnt/mysql
   tasks:
   # start NFS server configuration
   - name: apt update cache
@@ -28,6 +29,7 @@
     loop:
       - "{{ retain_mounting_dir}}"
       - "{{ delete_mounting_dir}}"
+      - "{{ mysql_mounting_dir}}"
 
   - name: start nfs-kernel-server
     service:
@@ -43,6 +45,7 @@
     with_items:
       - "{{ retain_mounting_dir }}    {{ ip_range }}(rw,sync,no_subtree_check)"
       - "{{ delete_mounting_dir }}    {{ ip_range }}(rw,sync,no_subtree_check)"
+      - "{{ mysql_mounting_dir }}    {{ ip_range }}(rw,sync,no_subtree_check,all_squash,anonuid=999,anongid=999)"
 
   - name: Run exportfs -a command
     command: exportfs -a
