--- a/single-master-node/manifests/helm/helm_chart/socket_chart/values.yaml
+++ b/single-master-node/manifests/helm/helm_chart/socket_chart/values.yaml
@@ -244,7 +244,8 @@ ingress-nginx:
   controller:
     scope:
       enabled: true
-      namespace: "socket-namespace" # let's check it--------------------------------------------
+      #namespace: "socket-namespace" # let's check it--------------------------------------------
+      namespaceSelector: "app=nginx-ingress" # must run: kubectl label namespace "namespace-name" app=nginx-ingress
     nodeSelector:
       kubernetes.io/hostname: node01 # check your node
     ingressClass: nginx
