--- a/single-master-node/playbook/master-node-playbook.yml
+++ b/single-master-node/playbook/master-node-playbook.yml
@@ -36,6 +36,8 @@
     file:
       path: "/home/{{ ansible_user }}/.kube"
       state: directory
+      owner: "{{ ansible_user }}"
+      group: "{{ ansible_user }}"
       mode: 0755
 
   - name: Copy admin.conf to user's kube config
