--- a/single-master-node/manifests/helm/helm_chart/socket_chart/Chart.yaml
+++ b/single-master-node/manifests/helm/helm_chart/socket_chart/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: socket_chart
-description: A Helm chart for Kubernetes
+description: DuongDX socket app - golang - react - mysql
 
 maintainers:
   - name: duongdx
@@ -36,3 +36,8 @@ dependencies:
     name: nfs-subdir-external-provisioner
     version: 4.0.18
     repository: "https://kubernetes-sigs.github.io/nfs-subdir-external-provisioner"
+
+  # configure metrics-server for horizontal-pod-scaling
+  - name: metrics-server
+    repository: "https://kubernetes-sigs.github.io/metrics-server"
+    version: 3.12.1
