--- a/cluster/Vagrantfile
+++ b/cluster/Vagrantfile
@@ -1,9 +1,11 @@
 NUM_MASTER_NODE = 2 # add standby master - recommend 3, 5, 7 master_node
 NUM_WORKER_NODE = 2
+NUM_PROXY_NODE = 2
 
 IP_NW = "192.168.56."
 MASTER_IP_START = 10
 NODE_IP_START = 15
+PROXY_IP_START = 30
 
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
@@ -21,16 +23,18 @@ Vagrant.configure("2") do |config|
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
   end
 
-  config.vm.define "haproxy" do |node|
+  (1..NUM_PROXY_NODE).each do |i|
+    config.vm.define "haproxy0#{i}" do |node|
       node.vm.provider "virtualbox" do |vb|
-        vb.name = "haproxy"
-        # vb.memory = 512
-        # vb.cpus = 0.5
+        vb.name = "haproxy0#{i}"
+        vb.memory = 1024
+        vb.cpus = 1
       end
-      node.vm.hostname = "haproxy"
-      node.vm.network :private_network, ip: "192.168.56.167"
-      node.vm.network "forwarded_port", guest: 22, host: 16798
+      node.vm.hostname = "haproxy0#{i}"
+      node.vm.network :private_network, ip: IP_NW + "#{PROXY_IP_START + i}"
+      node.vm.network "forwarded_port", guest: 22, host: "#{1607 + i}"
       node.vm.provision "setup-dns", type: "shell", :path => "../ubuntu/update-dns.sh"
+    end
   end
 
   # provision master node
