--- a/cluster/templates/keepalived.conf
+++ b/cluster/templates/keepalived.conf
@@ -5,10 +5,10 @@ vrrp_script haproxy-check {
 }
 
 vrrp_instance kubernetes {
-    state MASTER
+    state {{ keepalived_state }}
     interface {{ interface }}
     virtual_router_id 201
-    priority 200
+    priority {{ keepalived_priority }}
     advert_int 1
     authentication {
         auth_type PASS
