--- a/cluster/templates/keepalived.conf
+++ b/cluster/templates/keepalived.conf
@@ -1,3 +1,7 @@
+global_defs {
+    router_id {{ ansible_hostname }}
+}
+
 vrrp_script haproxy-check {
     script "killall -0 haproxy"
     interval 3
@@ -5,17 +9,18 @@ vrrp_script haproxy-check {
 }
 
 vrrp_instance kubernetes {
-    state {{ keepalived_state }}
-    interface {{ interface }}
+    state             {{ keepalived_state }}
+    interface         {{ interface }}
     virtual_router_id 201
-    priority {{ keepalived_priority }}
-    advert_int 1
+    priority          {{ keepalived_priority }}
+    advert_int        1
+    garp_master_delay 5
     authentication {
         auth_type PASS
         auth_pass secret
     }
     virtual_ipaddress {
-        {{ control_plane_lb_endpoint }}
+        {{ control_plane_lb_endpoint }} dev {{ interface }}
     }
     track_script {
         haproxy-check
