--- a/cluster/templates/haproxy.cfg
+++ b/cluster/templates/haproxy.cfg
@@ -31,6 +31,31 @@ defaults
   timeout check           10s
   maxconn                 3000
 
+listen stats
+    bind *:8085
+    stats enable
+    stats uri /stats
+    stats realm HAProxy-04\ Statistics
+    stats auth admin:password
+    stats admin if TRUE
+
+backend per_ip_and_url_rates
+    stick-table type binary len 8 size 1m expire 24h store http_req_rate(24h)
+
+backend per_ip_rates
+    stick-table type ip size 1m expire 24h store gpc0,gpc0_rate(30s)
+
+frontend frontend_ssl_443
+    bind :80
+    bind *:443 ssl crt /etc/haproxy/ssl/duongdx.pem
+    mode http
+    option httpclose
+    option forwardfor
+    reqadd X-Forwarded-Proto:\ https
+    #http-request set-header X-Forwarded-Proto:\ https
+    cookie  SRVNAME insert indirect nocache
+    default_backend http_backend
+
 frontend kubernetes-frontend
   bind *:6443
   mode tcp
@@ -46,26 +71,28 @@ backend kubernetes-backend
     server k8s-master01 {{ master01 }}:6443 check fall 3 rise 2
     server k8s-master02 {{ master02 }}:6443 check fall 3 rise 2
 
-frontend http_frontend
-  bind *:80
-  mode http
-  option tcplog
-  default_backend http_backend
+# frontend http_frontend
+#   bind *:80
+#   mode http
+#   option tcplog
+#   default_backend http_backend
 
 backend http_backend
-  mode http
+  mode    http
+  stats   enable
+  stats   auth username:password
   balance roundrobin
   server k8s-node01 {{ node01 }}:{{ http_node_port }} cookie p1 weight 1 check inter 2000
   server k8s-node02 {{ node02 }}:{{ http_node_port }} cookie p1 weight 1 check inter 2000
 
-frontend https_frontend
-  bind *:443
-  mode http
-  option tcplog
-  default_backend https_backend
-
-backend https_backend
-  mode http
-  balance roundrobin
-  server k8s-node01 {{ node01 }}:{{ https_node_port }} cookie p1 weight 1 check inter 2000
-  server k8s-node02 {{ node02 }}:{{ https_node_port }} cookie p1 weight 1 check inter 2000
+# frontend https_frontend
+#   bind *:443
+#   mode https
+#   option tcplog
+#   default_backend https_backend
+#
+# backend https_backend
+#   mode http
+#   balance roundrobin
+#   server k8s-node01 {{ node01 }}:{{ https_node_port }} cookie p1 weight 1 check inter 2000
+#   server k8s-node02 {{ node02 }}:{{ https_node_port }} cookie p1 weight 1 check inter 2000
