--- a/cluster/manifests/helm/helm_chart/socket_chart/templates/ingress.yaml
+++ b/cluster/manifests/helm/helm_chart/socket_chart/templates/ingress.yaml
@@ -10,11 +10,9 @@ metadata:
   name: {{ $value.name }}
 spec:
   ingressClassName: {{ $value.className }}
+  {{- with $value.rules }}
   rules:
-  - http:
-      {{- with $value.paths }}
-      paths:
-      {{- toYaml . | nindent 8 }}
-      {{- end }}
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
 ---
 {{- end }}
