--- a/cluster/manifests/helm/helm_chart/socket_chart/templates/service.yaml
+++ b/cluster/manifests/helm/helm_chart/socket_chart/templates/service.yaml
@@ -10,10 +10,10 @@ metadata:
   {{- end }}
 spec:
   type: {{ $value.serviceType }}
+  {{- with $value.servicePort }}
   ports:
-    - port: {{ $value.port }}
-      targetPort: {{ $value.port }}
-      protocol: TCP
+  {{- toYaml . | nindent 4 }}
+  {{- end }}
   {{- with $value.labels }}
   selector:
   {{- toYaml . | nindent 4 }}
