--- a/cluster/playbook/vars.yaml
+++ b/cluster/playbook/vars.yaml
@@ -28,3 +28,7 @@ ip_range: "192.168.56.0/24"
 retain_mounting_dir: /mnt/retain
 delete_mounting_dir: /mnt/delete
 mysql_mounting_dir: /mnt/mysql
+
+# jenkins variables:
+jenkins_year: 2023
+docker_version_code_name: bionic
